# giddyanne

./: .giddyanne.yaml  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLI.md  CONFIG.md  GUIDE.md  INSTALL.md  INTEGRATIONS.md  Makefile  README.md  benchmark-startup.sh  go.mod  http_main.py  install.py  main.py  mcp_main.py  mkdocs.yml  pyproject.toml
.github/workflows/: qa.yml  release.yml
benchmarks/: model_comparison.py  performance_comparison.py
benchmarks/configs/: giddyanne.yaml
cmd/giddy/: main.go
docs/: changelog.md  index.md  install.md  integrations.md  troubleshooting.md
docs/stylesheets/: extra.css
emacs/: giddyanne.el
overrides/: home.html
src/: api.py  chunker.py  embeddings.py  engine.py  errors.py  languages.py  mcp_server.py  project_config.py  vectorstore.py  watcher.py
tests/: conftest.py  test_api_sitemap.py  test_chunker.py  test_embeddings.py  test_languages.py  test_project_config.py  test_vectorstore.py  test_watcher.py
vscode/: .vscodeignore  package-lock.json  package.json  tsconfig.json
vscode/src/: client.ts  commands.ts  extension.ts
